# bipa

./: .env.example  Cargo.toml  README.md  infra.yaml
src/: app_context.rs  lightning_fetcher.rs  lightning_ingestor.rs  main.rs  node_data.rs
