[package]
name = "bipa"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
chrono = "0.4.38"
dotenvy = "0.15.7"
mongodb = "3.1.0"
reqwest = { version = "0.12.7", features = ["json"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
